# Botik

./: .claudeignore  .env.backup  .env.example  .gitignore  AGENTS.md  AGENTS_CONTEXT.md  CLAUDE.md  GITHUB_SETUP.md  PythonBot_Telegram.py  PythonBot_Telegram.pyproj  PythonBot_Telegram.sln  README.md  SESSION_LOG.md  VERSION  WORKPLAN.md  active_models.yaml  botik.spec  build_botik.bat  build_portable_exe.bat  build_windows_installer.bat  bybit_smoke_test.py  config.example.yaml  dashboard_preview.html  dashboard_release_manifest.yaml  dashboard_template.html  dashboard_workspace_manifest.yaml  docker-compose.postgres.yml  example.py  installer.iss  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  requirements.txt  run_dev.bat  run_windows_gui.bat  test_example.py  version.txt
app-service/: README.md  pyproject.toml
app-service/src/botik_app_service/: __init__.py  main.py
app-service/src/botik_app_service/analytics_read/: __init__.py  legacy_adapter.py  service.py
app-service/src/botik_app_service/api/: __init__.py  routes_admin.py  routes_analytics.py  routes_backtest.py  routes_bootstrap.py  routes_db_health.py  routes_diagnostics.py  routes_events.py  routes_futures.py  routes_health.py  routes_home_summary.py  routes_jobs.py  routes_logs.py  routes_market.py  routes_models.py  routes_orderbook.py  routes_reconciliation.py  routes_runtime_control.py  routes_runtime_status.py  routes_settings.py  routes_spot.py  routes_telegram.py
app-service/src/botik_app_service/contracts/: jobs.py  (+20 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+593 files in other folders)
