[package]
name = "botik_desktop"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
ureq = { version = "2.12.1", default-features = false }

[features]
default = []
